---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 2814
expression: output
---
==INPUT==


import { component$, useStore, mutable } from '@qwik.dev/core';

import {dep} from './file';
import styles from './styles.module.css';

export const App = component$((props) => {
	const signal = useSignal(0);
	const store = useStore({});
	const count = props.counter.count;

	return (
		<div
			class={{
				even: count % 2 === 0,
				odd: count % 2 === 1,
				stable0: true,
				hidden: false,
			}}
			staticClass={styles.foo}
			staticDocument={window.document}
			staticText="text"
			staticText2={`text`}
			staticNumber={1}
			staticBoolean={true}
			staticExpr={`text${12}`}
			staticExpr2={typeof `text${12}` === 'string' ? 12 : 43}

			signal={signal}
			signalValue={signal.value}
			signalComputedValue={12 + signal.value}

			store={store.address.city.name}
			storeComputed={store.address.city.name ? 'true' : 'false'}

			dep={dep}
			depAccess={dep.thing}
			depComputed={dep.thing + 'stuff'}

			global={globalThing}
			globalAccess={globalThing.thing}
			globalComputed={globalThing.thing + 'stuff'}


			noInline={signal.value()}
			noInline2={signal.value + unknown()}
			noInline3={mutable(signal)}
			noInline4={signal.value + dep}
		/>

	);
});

============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { _fnSignal } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
import { useStore, mutable } from '@qwik.dev/core';
import { dep } from './file';
import styles from './styles.module.css';
//
const _hf0 = (p0)=>12 + p0.value;
const _hf0_str = "12+p0.value";
const _hf1 = (p0)=>p0.address.city.name;
const _hf1_str = "p0.address.city.name";
const _hf2 = (p0)=>p0.address.city.name ? 'true' : 'false';
const _hf2_str = 'p0.address.city.name?"true":"false"';
const App_component_ckEPmXZlub0 = (props)=>{
    const signal = useSignal(0);
    const store = useStore({});
    const count = props.counter.count;
    return /*#__PURE__*/ _jsxSorted("div", {
        class: {
            even: count % 2 === 0,
            odd: count % 2 === 1,
            stable0: true,
            hidden: false
        },
        global: globalThing,
        globalAccess: globalThing.thing,
        globalComputed: globalThing.thing + 'stuff',
        noInline: signal.value(),
        noInline2: signal.value + unknown(),
        noInline3: mutable(signal),
        noInline4: signal.value + dep,
        staticDocument: window.document
    }, {
        staticClass: styles.foo,
        staticText: "text",
        staticText2: `text`,
        staticNumber: 1,
        staticBoolean: true,
        staticExpr: `text${12}`,
        staticExpr2: typeof `text${12}` === 'string' ? 12 : 43,
        signal: signal,
        signalValue: _wrapProp(signal),
        signalComputedValue: _fnSignal(_hf0, [
            signal
        ], _hf0_str),
        store: _fnSignal(_hf1, [
            store
        ], _hf1_str),
        storeComputed: _fnSignal(_hf2, [
            store
        ], _hf2_str),
        dep: dep,
        depAccess: dep.thing,
        depComputed: dep.thing + 'stuff'
    }, null, 3, "u6_0");
};
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl(App_component_ckEPmXZlub0, "App_component_ckEPmXZlub0"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AACA,SAAqB,QAAQ,EAAE,OAAO,QAAQ,iBAAiB;AAE/D,SAAQ,GAAG,QAAO,SAAS;AAC3B,OAAO,YAAY,sBAAsB;;mBA0BjB,KAAK,GAAO,KAAK;;mBAE/B,GAAM,OAAO,CAAC,IAAI,CAAC,IAAI;;mBACf,GAAM,OAAO,CAAC,IAAI,CAAC,IAAI,GAAG,SAAS;;kCA3BvB,CAAC;IAC9B,MAAM,SAAS,UAAU;IACzB,MAAM,QAAQ,SAAS,CAAC;IACxB,MAAM,QAAQ,MAAM,OAAO,CAAC,KAAK;IAEjC,qBACC,WAAC;QACA,OAAO;YACN,MAAM,QAAQ,MAAM;YACpB,KAAK,QAAQ,MAAM;YACnB,SAAS;YACT,QAAQ;QACT;QAqBA,QAAQ;QACR,cAAc,YAAY,KAAK;QAC/B,gBAAgB,YAAY,KAAK,GAAG;QAGpC,UAAU,OAAO,KAAK;QACtB,WAAW,OAAO,KAAK,GAAG;QAC1B,WAAW,QAAQ;QACnB,WAAW,OAAO,KAAK,GAAG;QA3B1B,gBAAgB,OAAO,QAAQ;;QAD/B,aAAa,OAAO,GAAG;QAEvB,YAAW;QACX,aAAa,CAAC,IAAI,CAAC;QACnB,cAAc;QACd,eAAe;QACf,YAAY,CAAC,IAAI,EAAE,IAAI;QACvB,aAAa,OAAO,CAAC,IAAI,EAAE,IAAI,KAAK,WAAW,KAAK;QAEpD,QAAQ;QACR,WAAW,YAAE;QACb,mBAAmB;;;QAEnB,KAAK;;;QACL,aAAa;;;QAEb,KAAK;QACL,WAAW,IAAI,KAAK;QACpB,aAAa,IAAI,KAAK,GAAG;;AAc5B;AA7CA,OAAO,MAAM,oBAAM,+FA6ChB\"}")
== DIAGNOSTICS ==

[]
